test/Fail/Issue2902.err
Issue2902.agda:13.9-13: error: [UnequalTerms]
i != fsuc fzero of type Fin 2
when checking that the expression refl has type i ≡ fsuc fzero
